Fix syntax errors in html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
       <form id="robot">
       <div class= "form-group">
-        <label for="number">Enter a number and Mr. Roboger will convert it into friendly-speak:</lablel
-        <input id="number" class="form-control type="text">
+        <label for="number">Enter a number and Mr. Roboger will convert it into friendly-speak:</label>
+        <input id="number" class="form-control" type="text">
       </div>
       <button type="submit" class="btn btn-primary">Sumbit</button>
         <br>
