Complete basic js

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
   <title>Mr. Roboger's Neighborhood</title>
 </head>
 <body>
+  
   <div class="container">
     <div class="jumbotron text-center">
     <h1>Mr. Roboger's Neighborhood<br>Numeric Interpreter</h1>
     </div>
       <form id="robot">
-      <div class= "form-group">
-        <label for="number">Enter a number and Mr. Roboger will convert it into friendly-speak:</label>
-        <input id="number" class="form-control" type="text">
+        <div class= "form-group">
+          <label for="number">Enter a number and Mr. Roboger will convert it into friendly-speak:</label>
+          <input id="number" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn btn-primary">Sumbit</button>
-        <br>
-      </form>
-      <h3 class="result">
-        <br><p><strong><span>Thank you, but allow me to convert that to a number I understand:</span><span class="input"></span></strong></p>
-      </h3>
+      <button type="submit" class="btn">Sumbit</button>
+    </form>
+    <h3 class="result"></h3>
   </div>
+
 </body>
 </html>
