--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
       <form id="robot">
         <div class= "form-group">
-          <label for="number">Enter a number and Mr. Roboger will convert it into friendly-speak:</label>
+          <label for="number">Enter a number and Mr. Roboger will convert it into friendly robot-speak:</label>
           <input id="number" class="form-control" type="text">
       </div>
       <button type="submit" class="btn">Sumbit</button>
